--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@storybook/blocks": "^8.3.5",
     "@storybook/test": "^8.3.5",
     "@types/jasmine": "~5.1.0",
+    "husky": "^9.1.6",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
