--- a/.github/workflows/convert-tokens.yml
+++ b/.github/workflows/convert-tokens.yml
@@ -4,10 +4,10 @@ name: Convert JSON to SCSS
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
