--- a/.github/workflows/convert-tokens.yml
+++ b/.github/workflows/convert-tokens.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
-          git add ./src/styles/tokens.scss
+          git add ./tokens.scss
           git commit -m 'Auto-generated SCSS from JSON tokens'
           git push
         env:
