--- a/.github/workflows/convert-tokens.yml
+++ b/.github/workflows/convert-tokens.yml
@@ -37,8 +37,6 @@ jobs:
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
-          git add ./tokens.scss
+          git add .tokens.scss
           git commit -m 'Auto-generated SCSS from JSON tokens'
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
