--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -1,10 +1,14 @@
 name: Package Release
 
 on:
-  push:
-    branches: [staging]
-    paths:
-      - 'CHANGELOG.md'
+  workflow_dispatch:
+    inputs:
+
+      branche: 
+        description: "The publish workflow"
+        required: true
+        default: "main"
+    
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
