--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -3,12 +3,10 @@ name: Package Release
 on:
   workflow_dispatch:
     inputs:
-
-      branche: 
-        description: "The publish workflow"
+      branch:
+        description: "Select the branch to publish from"
         required: true
         default: "master"
-    
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -32,23 +30,14 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
-          scope: '@your-org' # Replace with your organization or scope
 
       - name: Install dependencies
-        run: npm install # Use 'npm install' if you don't use npm
+        run: npm install
 
       - name: Build Angular Library
-        run: npm run build # Replace 'build:lib' with your specific build command for the library
+        run: npm run build # Replace with your specific build command for the library
 
-      - name: Build Storybook
-        run: npm run build-storybook # Replace 'npm' with 'npm' if needed
-
-      - name: Install Playwright
-        run: npx playwright install --with-deps
-
-      
-      - name: Publish Package
-        run: npm publish # Use 'npm publish' if you use npm
+      - name: Publish Package to GitHub Packages
+        run: npm publish --access public # Add --access public for scoped packages if necessary
         env:
-          GITHUB_TOKEN: ${{ secrets.REPO_GIT_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.REPO_GIT_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
